updated project page and other formating

--- a/Contact.html
+++ b/Contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Colin Hoolwerf</title>
+    <title>Contact Me</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
@@ -41,11 +41,11 @@
 </body>
 
 <!-- Footer -->
-<footer>
-  <a href="mailto:colinhoolwerf@gmail.com" class="fa fa-google" title="Email"></a>
-  <a href="https://www.linkedin.com/in/colinhoolwerf/" target="_blank" class="fa fa-linkedin" title="LinkedIn"></a>
-  <a href="https://github.com/ColinH58" target="_blank" class="fa fa-github" title="GitHub"></a> 
-  <a href="https://www.instagram.com/colinh58/" target="_blank" class="fa fa-instagram" title="Instagram"></a>
-  <a href="https://twitter.com/ColinSH58" target="_blank" class="fa fa-twitter" title="Twitter"></a>
-</footer>
+  <footer>
+    <a href="mailto:colinhoolwerf@gmail.com" target="_blank" class="fa fa-google" title="Email"></a>
+    <a href="https://www.linkedin.com/in/colinhoolwerf/" target="_blank" class="fa fa-linkedin" title="LinkedIn"></a>
+    <a href="https://github.com/ColinH58" target="_blank" class="fa fa-github" title="GitHub"></a> 
+    <a href="https://www.instagram.com/colinh58/" target="_blank" class="fa fa-instagram" title="Instagram"></a>
+    <a href="https://twitter.com/ColinSH58" target="_blank" class="fa fa-twitter" title="Twitter"></a>
+  </footer>
 </html>
