removed blackjack and guessing game, added netlify links instead

--- a/Projects.html
+++ b/Projects.html
@@ -21,26 +21,19 @@
 
 <!-- Projects Page Body -->
 <body>
-  <div class="BlackJackGame">
-    <h2 id="title">Blackjack</h2>
-    <p id="message-element">Want to play a blackjack?</p>
-    <p id="cards-element">Cards:</p>
-    <p id="sum-element">Your Hand:</p>
-    <button onclick="startGame()">Start Game</button>
-    <button onclick="hitCard()">Hit</button>
-    <button onclick="stayCard()">Stay</button>
-    <p id="result-element">Click Start Game to Play!</p>
-  </div>
-
   <div class="Projects">
     <h2>Projects Deployed on Netlify</h2>
     <ul class="ProjectList">
       <li>
-        <a href="https://colin-hoolwerf-snake.netlify.app/" target="_blank">Snake in Vanilla JavaScript</a>
+        <a href="https://colin-hoolwerf-snake.netlify.app/" target="_blank">Classic Snake in Vanilla JavaScript</a>
       </li>
 
       <li>
         <a href="https://colin-hoolwerf-guessing-game.netlify.app/" target="_blank">Guessing Game in Vanilla JavaScript</a>
+      </li>
+
+      <li>
+        <a href="https://colin-hoolwerf-blackjack.netlify.app/" target="_blank">Blackjack Game in Vanilla JavaScript</a>
       </li>
     </ul>
   </div>
