added weekly entry

--- a/blog.html
+++ b/blog.html
@@ -226,9 +226,11 @@
           with bonus features! Check out my projects page for more! <br> 
           <em>(Fullstack Academy Week 9 of 27)</em> </li>
 
-        <!-- <li> <u>Week 36: Monday, February 7 - Sunday, February 13</u> <br> 
-          ENTRY <br> 
-          <em>(Fullstack Academy Week 10 of 27)</em> </li> -->
+        <li> <u>Week 36: Monday, February 7 - Sunday, February 13</u> <br> 
+          Promises, Async, Await, and Fetching API data. This was a big week! We covered grabbing and working with APIs and posting them on a SPA-style site. We made a very simple website that 
+          shows you cards of puppies and allows you to create your own or delete an existing one. It was surprisingly more challenging than I expected and was our first group project, I had a 
+          partner for the first time. <br> 
+          <em>(Fullstack Academy Week 10 of 27)</em> </li>
 
         <!-- <li> <u>Week 37: Monday, February 14 - Sunday, February 20</u> <br> 
           ENTRY <br> 
