added weekly entry

--- a/blog.html
+++ b/blog.html
@@ -233,9 +233,10 @@
           partner for the first time. <br> 
           <em>(Fullstack Academy Week 10 of 27)</em> </li>
 
-        <!-- <li> <u>Week 37: Monday, February 14 - Sunday, February 20</u> <br> 
-          ENTRY <br> 
-          <em>(Fullstack Academy Week 11 of 27)</em> </li> -->
+        <li> <u>Week 37: Monday, February 14 - Sunday, February 20</u> <br> 
+          We started the week off with higher-order functions and passing functions as arguments into other functions. That quickly transitioned into React! It was a big week, and a long time coming 
+          (again). I’m very grateful this wasn’t my first time seeing React, and because it wasn’t my first time seeing it the lessons and labs went relatively smoothly. <br> 
+          <em>(Fullstack Academy Week 11 of 27)</em> </li>
 
         <!-- <li> <u>Week 38: Monday, February 21 - Sunday, February 27</u> <br> 
           ENTRY <br> 
