reformatted with prettier

--- a/Contact.html
+++ b/Contact.html
@@ -1,52 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Me</title>
-    <link rel="icon" href="https://i.imgur.com/5Knga8K.png">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="icon" href="https://i.imgur.com/5Knga8K.png" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
 
- <!-- Navigation Bar -->
- <nav>
-  <a href="index.html" title="Home Page">Home</a>
-  <a href="blog.html" title="Coding Journal">Blog</a>
-  <a href="resume.html" title="Resume">Resume</a>
-  <a href="Projects.html" title="Projects">Projects</a>
-  <a href="Contact.html" title="Contacts"><u>Contact</u></a>
-</nav>
+  <!-- Navigation Bar -->
+  <nav>
+    <a href="index.html" title="Home Page">Home</a>
+    <a href="blog.html" title="Coding Journal">Blog</a>
+    <a href="resume.html" title="Resume">Resume</a>
+    <a href="Projects.html" title="Projects">Projects</a>
+    <a href="Contact.html" title="Contacts"><u>Contact</u></a>
+  </nav>
 
-<!-- Contact Page Body -->
-<body>
-  <div class="Contact">
-    <div class="ContactForm">
-        <form action="https://formsubmit.co/colinhoolwerf@gmail.com" method="POST">
-          <input type="hidden" name="_next" value="https://colinh58.github.io/Portfolio/thankyou.html">
+  <!-- Contact Page Body -->
+  <body>
+    <div class="Contact">
+      <div class="ContactForm">
+        <form
+          action="https://formsubmit.co/colinhoolwerf@gmail.com"
+          method="POST"
+        >
+          <input
+            type="hidden"
+            name="_next"
+            value="https://colinh58.github.io/Portfolio/thankyou.html"
+          />
           <label for="inputname">Name</label>
-          <input type="text" id="inputname" name="inputname" placeholder="Enter Your Name" required>
+          <input
+            type="text"
+            id="inputname"
+            name="inputname"
+            placeholder="Enter Your Name"
+            required
+          />
           <label for="inputcompany">Company</label>
-          <input type="text" id="inputcompany" name="inputcompany" placeholder="Enter Your Company" required> 
+          <input
+            type="text"
+            id="inputcompany"
+            name="inputcompany"
+            placeholder="Enter Your Company"
+            required
+          />
           <label for="inputemail">Email Address</label>
-          <input type="text" id="inputemail" name="inputemail" placeholder="Enter Your Email Address" required>
+          <input
+            type="text"
+            id="inputemail"
+            name="inputemail"
+            placeholder="Enter Your Email Address"
+            required
+          />
           <label for="subject">Subject</label>
-          <input type="text" id="subject" name="subject" placeholder="Subject Line" required>
+          <input
+            type="text"
+            id="subject"
+            name="subject"
+            placeholder="Subject Line"
+            required
+          />
           <label for="message">Message</label>
-          <textarea id="message" name="message" placeholder="Write your message..." style="height:200px" required></textarea>
-          <input type="submit" value="Submit">
+          <textarea
+            id="message"
+            name="message"
+            placeholder="Write your message..."
+            style="height: 200px"
+            required
+          ></textarea>
+          <input type="submit" value="Submit" />
         </form>
-      </div>   
-  </div>
-</body>
+      </div>
+    </div>
+  </body>
 
-<!-- Footer -->
+  <!-- Footer -->
   <footer>
-    <a href="mailto:colinhoolwerf@gmail.com" target="_blank" class="fa fa-google" title="Email"></a>
-    <a href="https://www.linkedin.com/in/colinhoolwerf/" target="_blank" class="fa fa-linkedin" title="LinkedIn"></a>
-    <a href="https://github.com/ColinH58" target="_blank" class="fa fa-github" title="GitHub"></a> 
-    <a href="https://www.instagram.com/colinh58/" target="_blank" class="fa fa-instagram" title="Instagram"></a>
-    <a href="https://twitter.com/ColinSH58" target="_blank" class="fa fa-twitter" title="Twitter"></a>
+    <a
+      href="mailto:colinhoolwerf@gmail.com"
+      target="_blank"
+      class="fa fa-google"
+      title="Email"
+    ></a>
+    <a
+      href="https://www.linkedin.com/in/colinhoolwerf/"
+      target="_blank"
+      class="fa fa-linkedin"
+      title="LinkedIn"
+    ></a>
+    <a
+      href="https://github.com/ColinH58"
+      target="_blank"
+      class="fa fa-github"
+      title="GitHub"
+    ></a>
+    <a
+      href="https://www.instagram.com/colinh58/"
+      target="_blank"
+      class="fa fa-instagram"
+      title="Instagram"
+    ></a>
+    <a
+      href="https://twitter.com/ColinSH58"
+      target="_blank"
+      class="fa fa-twitter"
+      title="Twitter"
+    ></a>
   </footer>
 </html>
