--- a/blog.html
+++ b/blog.html
@@ -184,19 +184,19 @@
           <em>(Fullstack Academy Week 1 of 27)</em> </li>
 
         <li> <u>Week 28: Monday, December 13 - Sunday, December 19</u> <br> 
-          This week was about CSS then JS towards the end. We covered responsive design and pseudo-classes. It was a nice refresher, I had already gotten pretty rusty at both! On the final day of 
-          the week, we covered the fundamentals of JS. So far, so good! <br> 
+          This week was about CSS then JS towards the end. We covered responsive design and pseudo-classes. It was a nice refresher, I had already gotten pretty rusty at both! On the final day 
+          of the week, we covered the fundamentals of JS. So far, so good! <br> 
           <em>(Fullstack Academy Week 2 of 27)</em> </li>
 
         <li> <u>Week 29: Monday, December 20 - Sunday, December 26</u> <br> 
-          There was only one class this week, on Monday. Class resumes on the 3rd, so I have two weeks “off” but I don’t plan on stopping! My job has given me those same two weeks off! I rewatched 
-          lectures, did and redid the assignments/quizzes, and researched the gaps in my understanding when I found some. I spent most of my time watching all the videos in the CodingTrain p5.js 
-          tutorial playlist. I even got a head start on the next graded project due in the first week of next year! <br> 
+          There was only one class this week, on Monday. Class resumes on the 3rd, so I have two weeks “off” but I don’t plan on stopping! My job has given me those same two weeks off! I 
+          rewatched lectures, did and redid the assignments/quizzes, and researched the gaps in my understanding when I found some. I spent most of my time watching all the videos in the 
+          CodingTrain p5.js tutorial playlist. I even got a head start on the next graded project due in the first week of next year! <br> 
           <em>(Fullstack Academy Week 3 of 27)</em> </li>
 
         <li> <u>Week 30: Monday, December 27 - Sunday, January 2</u> <br> 
-          This week I finished the CodingTrain JS tutorials, then watched a couple of other videos from the same teacher. I then researched the Caesar Cipher project that is coming up. Progress was 
-          very slow this week due to a COVID shot and family events. <br> 
+          This week I finished the CodingTrain JS tutorials, then watched a couple of other videos from the same teacher. I then researched the Caesar Cipher project that is coming up. Progress 
+          was very slow this week due to a COVID shot and family events. <br> 
           <em>(Fullstack Academy Week 4 of 27)</em> </li>
 
         <li> <u>Week 31: Monday, January 3 - Sunday, January 9</u> <br> 
@@ -211,8 +211,8 @@
           <em>(Fullstack Academy Week 6 of 27)</em> </li>
 
         <li> <u>Week 33: Monday, January 17 - Sunday, January 23</u> <br> 
-          We had no class on Monday for MLK day so instead, I used that time to get as ahead as I possibly could. We started the week working with the DOM and event listeners and ended it working 
-          with and in GitHub. The project for the week was a guessing game that I should have showcased in my projects section if you would like to take a look! <br> 
+          We had no class on Monday for MLK day so instead, I used that time to get as ahead as I possibly could. We started the week working with the DOM and event listeners and ended it 
+          working with and in GitHub. The project for the week was a guessing game that I should have showcased in my projects section if you would like to take a look! <br> 
           <em>(Fullstack Academy Week 7 of 27)</em> </li>
 
         <li> <u>Week 34: Monday, January 24 - Sunday, January 30</u> <br> 
@@ -222,9 +222,9 @@
           <em>(Fullstack Academy Week 8 of 27)</em> </li>
 
         <li> <u>Week 35: Monday, January 31 - Sunday, February 6</u> <br> 
-          Review week continued! We spent every lecture night working on our game of choice. We were usually in groups of 4 so that we could ask our fellow classmates for help (as well as the teacher 
-          and TAs via a ticket). This week was easily the most satisfying and validating week of my relatively short coding history. By the end of the week, I had a fully functioning Snake game 
-          with bonus features! Check out my projects page for more! <br> 
+          Review week continued! We spent every lecture night working on our game of choice. We were usually in groups of 4 so that we could ask our fellow classmates for help (as well as the 
+          teacher and TAs via a ticket). This week was easily the most satisfying and validating week of my relatively short coding history. By the end of the week, I had a fully functioning 
+          Snake game with bonus features! Check out my projects page for more! <br> 
           <em>(Fullstack Academy Week 9 of 27)</em> </li>
 
         <li> <u>Week 36: Monday, February 7 - Sunday, February 13</u> <br> 
@@ -234,8 +234,8 @@
           <em>(Fullstack Academy Week 10 of 27)</em> </li>
 
         <li> <u>Week 37: Monday, February 14 - Sunday, February 20</u> <br> 
-          We started the week off with higher-order functions and passing functions as arguments into other functions. That quickly transitioned into React! It was a big week, and a long time coming 
-          (again). I’m very grateful this wasn’t my first time seeing React, and because it wasn’t my first time seeing it the lessons and labs went relatively smoothly. <br> 
+          We started the week off with higher-order functions and passing functions as arguments into other functions. That quickly transitioned into React! It was a big week, and a long time 
+          coming (again). I’m very grateful this wasn’t my first time seeing React, and because it wasn’t my first time seeing it the lessons and labs went relatively smoothly. <br> 
           <em>(Fullstack Academy Week 11 of 27)</em> </li>
 
         <!-- <li> <u>Week 38: Monday, February 21 - Sunday, February 27</u> <br> 
