--- a/resume.html
+++ b/resume.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Resume</title>
-    <link rel="icon" href="https://i.imgur.com/5Knga8K.png">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="icon" href="https://i.imgur.com/5Knga8K.png" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
 
- <!-- Navigation Bar -->
- <nav>
+  <!-- Navigation Bar -->
+  <nav>
     <a href="index.html" title="Home Page">Home</a>
     <a href="blog.html" title="Coding Journal">Blog</a>
     <a href="resume.html" title="Resume"><u>Resume</u></a>
@@ -19,91 +22,182 @@
     <a href="Contact.html" title="Contacts">Contact</a>
   </nav>
 
-<!-- Resume Page Body -->
-<body>
-    <img id="selfie" src="assets/Selfie.jpg" alt="selfie of Colin Hoolwerf">
+  <!-- Resume Page Body -->
+  <body>
+    <img id="selfie" src="assets/Selfie.jpg" alt="selfie of Colin Hoolwerf" />
     <div class="AboutSection">
-        <h1><u>About</u></h1>
-        <ul>
-            <li>I am an aspiring Full-Stack Developer, learning how to code from Fullstack Academy, Codecademy, and YouTube tutorials.</li>
-            <li>I am currently a Workplace Coordinator for Autodesk, Inc in Plano, TX. I have a diverse and well rounded employment history with experience in construction (sheet metal), 
-            payroll, facilities and general office support.</li>
-            <li>I am a dual citizen of Canada and the US, originally from Calgary, Alberta and naturalized in Irving, Texas in the summer of 2011.</li>
-        </ul>
+      <h1><u>About</u></h1>
+      <ul>
+        <li>
+          I am an aspiring Full-Stack Developer, learning how to code from
+          Fullstack Academy, Codecademy, and YouTube tutorials.
+        </li>
+        <li>
+          I am currently a Workplace Coordinator for Autodesk, Inc in Plano, TX.
+          I have a diverse and well rounded employment history with experience
+          in construction (sheet metal), payroll, facilities and general office
+          support.
+        </li>
+        <li>
+          I am a dual citizen of Canada and the US, originally from Calgary,
+          Alberta and naturalized in Irving, Texas in the summer of 2011.
+        </li>
+      </ul>
     </div>
     <div class="ExperienceSection">
-        <h1><u>Experience</u></h1>
+      <h1><u>Experience</u></h1>
+      <ul>
+        <li><h2>Workplace Coordinator</h2></li>
+        <h3>Autodesk, Plano TX</h3>
+        <h4>May 2016 - Present</h4>
         <ul>
-            <li><h2>Workplace Coordinator</h2></li>
-                <h3>Autodesk, Plano TX</h3>
-                    <h4>May 2016 - Present</h4>
-                        <ul>
-                            <li>Created proposals for office renovations and equipment updates with estimated costs from local vendors and contractors.</li>
-                            <li>Received and fulfilled facilities requests including requests for new furniture, conferencing equipment, kitchen equipment, general supplies and 
-                                repairs.</li>
-                            <li>Received and processed mail and parcels including managing outgoing mail and shipping equipment both domestically and internationally.</li>
-                            <li>Worked with building management to ensure changes were landlord approved and that contractors had required paperwork and security clearances.</li>
-                            <li>Assisted with event planning and managed the local conference room calendars. I was also responsible for tracking site and reception event metrics.</li>
-                            <li>Collaborated with our IT department to update and refresh server room equipment, including UPS and network switch upgrades.</li>
-                            <li>Worked side by side with our security teams to create evacuation plans, troubleshoot security camera issues, and create a safe work environment.</li>
-                            <li>Due to the size of the site I was also the primary site contact, after hours point of contact, receptionist and IT contact.</li>
-                        </ul>
-            <li><h2>Data Entry Coordinator</h2></li>
-                <h3>Employbridge, Irving TX</h3>
-                    <h4>July 2015 - April 2016</h4>
-                        <ul>
-                            <li>Quickly and accurately entered payroll data from submitted time cards and spreadsheets.</li>
-                            <li>Coordinated with other payroll and billing staff to ensure proper processing.</li>
-                            <li>Trained new employees and helped develop improvements to the process.</li>
-                        </ul>
-            <li><h2>Sheetmetal Technician Assistant</h2></li>
-                <h3>Trotter & Morton, Calgary AB</h3>
-                    <h4>October 2013 - April 2015</h4>
-                        <ul>
-                            <li>Organized construction material and equipment, general housekeeping, assisted journeymen as needed and kept up with safety paper work.</li>
-                            <li>Fabricated, installed and sealed duct systems for commercial and industrial buildings.</li>
-                            <li>Operated scissor lifts, boom lifts, and power tools while closing following strict safety policies.</li>
-                        </ul>
-            <li><h2>Intern</h2></li>
-                <h3>Milliman, Dallas TX</h3>
-                    <h4>June 2008 - August 2011</h4>
-                        <ul>
-                            <li>General clerical office support duties. Entered mass amounts of data, created letters to pension participants and mailed them. Created copies and 
-                                sent faxes.</li>
-                            <li>Call center duties including taking and making calls and recording sensitive data.</li>
-                            <li>Reconciled data files to payments posted by the system for numerous clients and corrected discrepancies.</li>
-                        </ul>
+          <li>
+            Created proposals for office renovations and equipment updates with
+            estimated costs from local vendors and contractors.
+          </li>
+          <li>
+            Received and fulfilled facilities requests including requests for
+            new furniture, conferencing equipment, kitchen equipment, general
+            supplies and repairs.
+          </li>
+          <li>
+            Received and processed mail and parcels including managing outgoing
+            mail and shipping equipment both domestically and internationally.
+          </li>
+          <li>
+            Worked with building management to ensure changes were landlord
+            approved and that contractors had required paperwork and security
+            clearances.
+          </li>
+          <li>
+            Assisted with event planning and managed the local conference room
+            calendars. I was also responsible for tracking site and reception
+            event metrics.
+          </li>
+          <li>
+            Collaborated with our IT department to update and refresh server
+            room equipment, including UPS and network switch upgrades.
+          </li>
+          <li>
+            Worked side by side with our security teams to create evacuation
+            plans, troubleshoot security camera issues, and create a safe work
+            environment.
+          </li>
+          <li>
+            Due to the size of the site I was also the primary site contact,
+            after hours point of contact, receptionist and IT contact.
+          </li>
         </ul>
-  </div>
-  <div class="EducationSection">
-    <h1><u>Education</u></h1>
+        <li><h2>Data Entry Coordinator</h2></li>
+        <h3>Employbridge, Irving TX</h3>
+        <h4>July 2015 - April 2016</h4>
         <ul>
-            <li><h2>Eastfield College</h2></li>
-            <ul>
-                <li><h3>Associate of Arts and Sciences (AAS), Biology</h3></li>
-                    <li><h4>2007 - 2011</h4></li>
-            </ul>
+          <li>
+            Quickly and accurately entered payroll data from submitted time
+            cards and spreadsheets.
+          </li>
+          <li>
+            Coordinated with other payroll and billing staff to ensure proper
+            processing.
+          </li>
+          <li>
+            Trained new employees and helped develop improvements to the
+            process.
+          </li>
         </ul>
+        <li><h2>Sheetmetal Technician Assistant</h2></li>
+        <h3>Trotter & Morton, Calgary AB</h3>
+        <h4>October 2013 - April 2015</h4>
+        <ul>
+          <li>
+            Organized construction material and equipment, general housekeeping,
+            assisted journeymen as needed and kept up with safety paper work.
+          </li>
+          <li>
+            Fabricated, installed and sealed duct systems for commercial and
+            industrial buildings.
+          </li>
+          <li>
+            Operated scissor lifts, boom lifts, and power tools while closing
+            following strict safety policies.
+          </li>
+        </ul>
+        <li><h2>Intern</h2></li>
+        <h3>Milliman, Dallas TX</h3>
+        <h4>June 2008 - August 2011</h4>
+        <ul>
+          <li>
+            General clerical office support duties. Entered mass amounts of
+            data, created letters to pension participants and mailed them.
+            Created copies and sent faxes.
+          </li>
+          <li>
+            Call center duties including taking and making calls and recording
+            sensitive data.
+          </li>
+          <li>
+            Reconciled data files to payments posted by the system for numerous
+            clients and corrected discrepancies.
+          </li>
+        </ul>
+      </ul>
+    </div>
+    <div class="EducationSection">
+      <h1><u>Education</u></h1>
+      <ul>
+        <li><h2>Eastfield College</h2></li>
+        <ul>
+          <li><h3>Associate of Arts and Sciences (AAS), Biology</h3></li>
+          <li><h4>2007 - 2011</h4></li>
+        </ul>
+      </ul>
     </div>
     <div class="VolunteerSection">
-        <h1><u>Volunteer Experience</u></h1>
-            <ul>
-                <li><h2>Legacy Counseling Center, Inc.</h2></li>
-                <ul>
-                    <li><h3>Admin Support, General Labor</h3></li>
-                        <li><h4>July 2003 - Present</h4></li>
-                            <li>Event management support, general labor, and general office support.</li>
-                </ul>
-            </ul>
-        </div>
-</body>
+      <h1><u>Volunteer Experience</u></h1>
+      <ul>
+        <li><h2>Legacy Counseling Center, Inc.</h2></li>
+        <ul>
+          <li><h3>Admin Support, General Labor</h3></li>
+          <li><h4>July 2003 - Present</h4></li>
+          <li>
+            Event management support, general labor, and general office support.
+          </li>
+        </ul>
+      </ul>
+    </div>
+  </body>
 
-<!-- Footer -->
-<footer>
-    <a href="mailto:colinhoolwerf@gmail.com" target="_blank" class="fa fa-google" title="Email"></a>
-    <a href="https://www.linkedin.com/in/colinhoolwerf/" target="_blank" class="fa fa-linkedin" title="LinkedIn"></a>
-    <a href="https://github.com/ColinH58" target="_blank" class="fa fa-github" title="GitHub"></a> 
-    <a href="https://www.instagram.com/colinh58/" target="_blank" class="fa fa-instagram" title="Instagram"></a>
-    <a href="https://twitter.com/ColinSH58" target="_blank" class="fa fa-twitter" title="Twitter"></a>
+  <!-- Footer -->
+  <footer>
+    <a
+      href="mailto:colinhoolwerf@gmail.com"
+      target="_blank"
+      class="fa fa-google"
+      title="Email"
+    ></a>
+    <a
+      href="https://www.linkedin.com/in/colinhoolwerf/"
+      target="_blank"
+      class="fa fa-linkedin"
+      title="LinkedIn"
+    ></a>
+    <a
+      href="https://github.com/ColinH58"
+      target="_blank"
+      class="fa fa-github"
+      title="GitHub"
+    ></a>
+    <a
+      href="https://www.instagram.com/colinh58/"
+      target="_blank"
+      class="fa fa-instagram"
+      title="Instagram"
+    ></a>
+    <a
+      href="https://twitter.com/ColinSH58"
+      target="_blank"
+      class="fa fa-twitter"
+      title="Twitter"
+    ></a>
   </footer>
 </html>
