--- a/index.html
+++ b/index.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Colin Hoolwerf</title>
-    <link rel="icon" href="https://i.imgur.com/5Knga8K.png">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="icon" href="https://i.imgur.com/5Knga8K.png" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
 
-<!-- Home Page Body -->
-<body>
-  <div class="Banner">
-    <h1 id="MyName">Colin Hoolwerf</h1>
+  <!-- Home Page Body -->
+  <body>
+    <div class="Banner">
+      <h1 id="MyName">Colin Hoolwerf</h1>
       <div class="Links">
-      <a href="blog.html" title="Coding Journal">Blog</a>
-      <a href="resume.html" title="Resume">Resume</a>
-      <a href="Projects.html" title="Projects">Projects</a>
-      <a href="Contact.html" title="Contacts">Contact</a>
+        <a href="blog.html" title="Coding Journal">Blog</a>
+        <a href="resume.html" title="Resume">Resume</a>
+        <a href="Projects.html" title="Projects">Projects</a>
+        <a href="Contact.html" title="Contacts">Contact</a>
       </div>
-  </div>
-</body>
+    </div>
+  </body>
 </html>
