--- a/thankyou.html
+++ b/thankyou.html
@@ -1,40 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Colin Hoolwerf</title>
-    <link rel="icon" href="https://i.imgur.com/5Knga8K.png">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="icon" href="https://i.imgur.com/5Knga8K.png" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
 
- <!-- Navigation Bar -->
- <nav>
-  <a href="index.html" title="Home Page">Home</a>
-  <a href="blog.html" title="Coding Journal">Blog</a>
-  <a href="resume.html" title="Resume">Resume</a>
-  <a href="Projects.html" title="Projects">Projects</a>
-  <a href="Contact.html" title="Contacts">Contact</a>
-</nav>
+  <!-- Navigation Bar -->
+  <nav>
+    <a href="index.html" title="Home Page">Home</a>
+    <a href="blog.html" title="Coding Journal">Blog</a>
+    <a href="resume.html" title="Resume">Resume</a>
+    <a href="Projects.html" title="Projects">Projects</a>
+    <a href="Contact.html" title="Contacts">Contact</a>
+  </nav>
 
-<!-- Thank You Page -->
-<body>
-  <div class="thankyou">
-    <h1>Thank you for reaching out, I'll get back to you soon!</h1>
-  </div>
-  <div class="thankyou">
-    <a href="index.html" title="Home Page">Return to Home Page</a>
-  </div>
-</body>
+  <!-- Thank You Page -->
+  <body>
+    <div class="thankyou">
+      <h1>Thank you for reaching out, I'll get back to you soon!</h1>
+    </div>
+    <div class="thankyou">
+      <a href="index.html" title="Home Page">Return to Home Page</a>
+    </div>
+  </body>
 
-<!-- Footer -->
-<footer>
-  <a href="mailto:colinhoolwerf@gmail.com" class="fa fa-google" title="Email"></a>
-  <a href="https://www.linkedin.com/in/colinhoolwerf/" target="_blank" class="fa fa-linkedin" title="LinkedIn"></a>
-  <a href="https://github.com/ColinH58" target="_blank" class="fa fa-github" title="GitHub"></a> 
-  <a href="https://www.instagram.com/colinh58/" target="_blank" class="fa fa-instagram" title="Instagram"></a>
-  <a href="https://twitter.com/ColinSH58" target="_blank" class="fa fa-twitter" title="Twitter"></a>
-</footer>
+  <!-- Footer -->
+  <footer>
+    <a
+      href="mailto:colinhoolwerf@gmail.com"
+      class="fa fa-google"
+      title="Email"
+    ></a>
+    <a
+      href="https://www.linkedin.com/in/colinhoolwerf/"
+      target="_blank"
+      class="fa fa-linkedin"
+      title="LinkedIn"
+    ></a>
+    <a
+      href="https://github.com/ColinH58"
+      target="_blank"
+      class="fa fa-github"
+      title="GitHub"
+    ></a>
+    <a
+      href="https://www.instagram.com/colinh58/"
+      target="_blank"
+      class="fa fa-instagram"
+      title="Instagram"
+    ></a>
+    <a
+      href="https://twitter.com/ColinSH58"
+      target="_blank"
+      class="fa fa-twitter"
+      title="Twitter"
+    ></a>
+  </footer>
 </html>
