added weekly entry

--- a/blog.html
+++ b/blog.html
@@ -238,9 +238,10 @@
           coming (again). I’m very grateful this wasn’t my first time seeing React, and because it wasn’t my first time seeing it the lessons and labs went relatively smoothly. <br> 
           <em>(Fullstack Academy Week 11 of 27)</em> </li>
 
-        <!-- <li> <u>Week 38: Monday, February 21 - Sunday, February 27</u> <br> 
-          ENTRY <br> 
-          <em>(Fullstack Academy Week 12 of 27)</em> </li> -->
+        <li> <u>Week 38: Monday, February 21 - Sunday, February 27</u> <br> 
+          React labs on React labs and into a solo React project. We covered working with NPM, setting up React projects, working with components and props and so much more. We’ve reached the 
+          end of what I learned during my self taught path, it’s going to be much harder from here and it was already not easy! <br> 
+          <em>(Fullstack Academy Week 12 of 27)</em> </li>
 
         <!-- <li> <u>Week 39: Monday, February 28 - Sunday, March 6</u> <br> 
           ENTRY <br> 
