--- a/blog.html
+++ b/blog.html
@@ -243,9 +243,11 @@
           end of what I learned during my self taught path, it’s going to be much harder from here and it was already not easy! <br> 
           <em>(Fullstack Academy Week 12 of 27)</em> </li>
 
-        <!-- <li> <u>Week 39: Monday, February 28 - Sunday, March 6</u> <br> 
-          ENTRY <br> 
-          <em>(Fullstack Academy Week 13 of 27)</em> </li> -->
+        <li> <u>Week 39: Monday, February 28 - Sunday, March 6</u> <br> 
+          This week’s goal was the completion of the project we started last week. Hooking up components, passing props, and making async/await fetch calls to an API. It was definitely the most 
+          challenging project we’ve done yet, partly because the instructions were vague but also because we had very little exposure to React prior to this. My previous experience with React 
+          did help me a bit, but not nearly enough to make a big difference! <br> 
+          <em>(Fullstack Academy Week 13 of 27)</em> </li>
 
         <!-- <li> <u>Week 40: Monday, March 7 - Sunday, March 13</u> <br> 
           ENTRY <br> 
