added weekly entry

--- a/blog.html
+++ b/blog.html
@@ -248,9 +248,11 @@
           challenging project we’ve done yet! My previous experience with React did help me a bit, but not nearly enough to make a big difference. <br> 
           <em>(Fullstack Academy Week 13 of 27)</em> </li>
 
-        <!-- <li> <u>Week 40: Monday, March 7 - Sunday, March 13</u> <br> 
-          ENTRY <br> 
-          <em>(Fullstack Academy Week 14 of 27)</em> </li> -->
+        <li> <u>Week 40: Monday, March 7 - Sunday, March 13</u> <br> 
+          React Router kicked us off this week, then we moved on to making a CRUD app. The big project due next week, started this week, was a CRUD app. We were tasked with making a simplified 
+          version of Craig’sList. I was given team members and most of each class for this assignment. By the end of the week we had made really good progress and were starting to work on 
+          authentication and account creation. <br> 
+          <em>(Fullstack Academy Week 14 of 27)</em> </li>
 
         <!-- <li> <u>Week 41: Monday, March 14 - Sunday, March 20</u> <br> 
           ENTRY <br> 
