added last week's entry

--- a/blog.html
+++ b/blog.html
@@ -254,9 +254,10 @@
           authentication and account creation. <br> 
           <em>(Fullstack Academy Week 14 of 27)</em> </li>
 
-        <!-- <li> <u>Week 41: Monday, March 14 - Sunday, March 20</u> <br> 
-          ENTRY <br> 
-          <em>(Fullstack Academy Week 15 of 27)</em> </li> -->
+        <li> <u>Week 41: Monday, March 14 - Sunday, March 20</u> <br> 
+          This week was another lab focused week with lectures starting us off each class but kept relatively short and pointed. My group and I made a lot of progress in each class, mostly 
+          interfacing with the provided API. I ultimately wasn’t able to finish the project due to a family emergency.  <br> 
+          <em>(Fullstack Academy Week 15 of 27)</em> </li>
 
         <!-- <li> <u>Week 42: Monday, March 21 - Sunday, March 27</u> <br> 
           ENTRY <br> 
