added weekly entry

--- a/blog.html
+++ b/blog.html
@@ -259,9 +259,11 @@
           interfacing with the provided API. I ultimately wasn’t able to finish the project due to a family emergency.  <br> 
           <em>(Fullstack Academy Week 15 of 27)</em> </li>
 
-        <!-- <li> <u>Week 42: Monday, March 21 - Sunday, March 27</u> <br> 
-          ENTRY <br> 
-          <em>(Fullstack Academy Week 16 of 27)</em> </li> -->
+        <li> <u>Week 42: Monday, March 21 - Sunday, March 27</u> <br> 
+          We started backend this week, kicking it off with Node and Express. Our first project was a Reddit clone with dummy data for posts. We were tasked with displaying all the posts and 
+          routing users to the individual posts when clicked on. We were also tasked with handling erroneous routes. All in all, it was a very small and simple project, meant to get our feet 
+          wet using Express. <br> 
+          <em>(Fullstack Academy Week 16 of 27)</em> </li>
 
         <!-- <li> <u>Week 43: Monday, March 28 - Sunday, April 3</u> <br> 
           ENTRY <br> 
