added weekly entry

--- a/blog.html
+++ b/blog.html
@@ -265,9 +265,10 @@
           wet using Node and Express. <br> 
           <em>(Fullstack Academy Week 16 of 27)</em> </li>
 
-        <!-- <li> <u>Week 43: Monday, March 28 - Sunday, April 3</u> <br> 
-          ENTRY <br> 
-          <em>(Fullstack Academy Week 17 of 27)</em> </li> -->
+        <li> <u>Week 43: Monday, March 28 - Sunday, April 3</u> <br> 
+          PostgreSQL! We started by creating a simple/dummy database, added tables, information, tags and more. We practiced manipulating data both in the CLI and VSCode with javascript. It 
+          was a lot more challenging than it should have been due to PC issues during setup but I powered through, mostly thanks to my teacher. <br> 
+          <em>(Fullstack Academy Week 17 of 27)</em> </li>
 
         <!-- <li> <u>Week 44: Monday, April 4 - Sunday, April 10</u> <br> 
           ENTRY <br> 
