added weekly entry

--- a/blog.html
+++ b/blog.html
@@ -270,9 +270,10 @@
           was a lot more challenging than it should have been due to PC issues during setup but I powered through, mostly thanks to my teacher. <br> 
           <em>(Fullstack Academy Week 17 of 27)</em> </li>
 
-        <!-- <li> <u>Week 44: Monday, April 4 - Sunday, April 10</u> <br> 
-          ENTRY <br> 
-          <em>(Fullstack Academy Week 18 of 27)</em> </li> -->
+        <li> <u>Week 44: Monday, April 4 - Sunday, April 10</u> <br> 
+          This week was a continuation of the previous week’s assignment in PostgreSQL. By the end of the week I had created a fully functioning and usable API! The project was very basic and 
+          nothing of actual value was stored but I enjoyed it, it was challenging and fun! <br> 
+          <em>(Fullstack Academy Week 18 of 27)</em> </li>
 
         <!-- <li> <u>Week 45: Monday, April 11 - Sunday, April 17</u> <br> 
           ENTRY <br> 
